Fix overflow on full height datapicker

--- a/src/styles/Base.scss
+++ b/src/styles/Base.scss
@@ -1,6 +1,8 @@
 .section-container {
   display: flex;
+  flex-direction: column;
   align-items: flex-start;
+  justify-content: flex-start;
   width: 100vw;
   height: 100vh;
   .memory-canvas {
