--- a/src/styles/DataPicker.scss
+++ b/src/styles/DataPicker.scss
@@ -1,6 +1,6 @@
 .datapicker-container {
   display: inline-flex;
-  align-self: center;
+  align-self: flex-start;
   overflow: hidden;
   position: relative;
   cursor: pointer;
